# emulator-8080

./: .gitignore  Cargo.toml  README.md  build.rs  icon.xcf
space-invaders-source/: SpaceInvaders.e  SpaceInvaders.f  SpaceInvaders.g  SpaceInvaders.h
src/: cpu.rs  io_handlers.rs  machine.rs  main.rs
src/cpu/: disassembler.rs
src/machine/: space_invaders.rs  test.rs
tools/disassembler/: code.txt  code_generator.py  opcodes.txt
