[package]
name = "emulator_8080"
version = "0.1.0"
build="build.rs"
authors = ["Aaron Boult <aaronboult25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["mixer", "image"]
